# predictions-dapp

./: .gitignore  Anchor.toml  id.json
app/: README.md  package-lock.json  package.json
app/.next/: trace
app/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
app/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js
app/.next/server/pages/: _app.js  _error.js  index.js
app/.next/server/vendor-chunks/: @swc.js  next.js
app/.next/static/chunks/: app-pages-internals.js  webpack.js
app/.next/static/webpack/: 07c631bac3d6a470.webpack.hot-update.json  e0552d1895e3b9bd.webpack.hot-update.json  webpack.007e36c45f49019c.hot-update.js  webpack.01da87d1876040db.hot-update.js  webpack.07c631bac3d6a470.hot-update.js  (+20 more)
app/src/app/: layout.tsx
app/src/components/: AvailableBets.tsx  EnterBetForm.tsx  NavBar.tsx  PriceGraphBet.tsx  PriceGraphOverTime.tsx  PythPriceFeed.tsx  header.tsx  oracle.tsx  pyth_send_usd.tsx
app/src/config/: index.tsx
app/src/hooks/: PredictionBetting.tsx  anchor.tsx  counter.tsx  initializeMasterAccount.tsx  oracle.tsx  priceFeed.tsx  priceGraph.tsx  useClaimBet.tsx  useCloseBet.tsx  useEnterBet.tsx  useFetchAvailableBets.tsx
app/src/lib/: types.ts
app/src/pages/: _app.tsx  index.tsx  oracle.tsx  style.css
programs/predictions-dapp/: Cargo.toml
programs/predictions-dapp/src/: lib.rs
programs/pyth_program/: Cargo.toml
programs/pyth_program/src/: lib.rs
tests/: predictions-dapp.ts
(+33 files in other folders)
